FIX component out of screen

--- a/libertchan/src/styles.scss
+++ b/libertchan/src/styles.scss
@@ -18,9 +18,9 @@
 **  THEMES
 ************* */
 
-app-panel-modal-message.ui-modal-header {
-  background-color: red;
-}
+// app-panel-modal-message.ui-modal-header {
+//   background-color: red;
+// }
 
 /* ------------ THEMES ----------------- */
 
